--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
       "typescript": "^4.0.2"
    },
    "scripts": {
-      "start": "ts-node src/index.ts"
+      "start": "ts-node-dev --respawn src/index.ts"
    }
 }
